...
        scrollBehavior = scrollBehavior,
        title = {
            Text(
                text = stringResource(R.string.app_name)
            )
        },
        modifier = modifier.testTag("toggle"),
        actions = {
            Switch(
                checked = checked,
                onCheckedChange = {
                    setDarkMode(!checked)
                    checked = it
...
